// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offchain deploy pool: deployment ledger 1`] = `
{
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61070": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Tree",
      },
      "lovelace": {
        "quantity": 2000000n,
        "tokenName": null,
      },
    },
    "datum": {
      "Tree": [
        {
          "leafs": [],
          "root": "4f6e4171d3e3e1c7f39a7b4b0d94509bdd3e3ef44ce3c0d2f3e9d43aaf160b28",
        },
      ],
    },
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 0,
  },
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61071": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Nullifiers",
      },
      "lovelace": {
        "quantity": 2000000n,
        "tokenName": null,
      },
    },
    "datum": {
      "Nullifiers": [
        [],
      ],
    },
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 1,
  },
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61072": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Vault",
      },
      "lovelace": {
        "quantity": 1068880n,
        "tokenName": null,
      },
    },
    "datum": "Vault",
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 2,
  },
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61073": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "lovelace": {
        "quantity": 24011010n,
        "tokenName": null,
      },
    },
    "datum": undefined,
    "datumHash": undefined,
    "hasScriptRef": true,
    "outputIndex": 3,
  },
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61074": {
    "address": "addr_test1qpuks2fj3l0umdy8h828zkz25sslwnrtzs7weed04lma8dkj7fmpe62uxcuwe5anz4kks022pj6fxa0mcfz52t9a9vysx0qvdu",
    "assets": {
      "lovelace": {
        "quantity": 2970453024n,
        "tokenName": null,
      },
    },
    "datum": undefined,
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 4,
  },
}
`;

exports[`offchain deposit: deposit ledger 1`] = `
{
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61071": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Nullifiers",
      },
      "lovelace": {
        "quantity": 2000000n,
        "tokenName": null,
      },
    },
    "datum": {
      "Nullifiers": [
        [],
      ],
    },
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 1,
  },
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61073": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "lovelace": {
        "quantity": 24011010n,
        "tokenName": null,
      },
    },
    "datum": undefined,
    "datumHash": undefined,
    "hasScriptRef": true,
    "outputIndex": 3,
  },
  "c39cdcfced317d0e9989a23ef5292a1ca20f8061e5be85c451645956dd430a0a0": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Tree",
      },
      "lovelace": {
        "quantity": 2000000n,
        "tokenName": null,
      },
    },
    "datum": {
      "Tree": [
        {
          "leafs": [
            "6a19f0fb4be54511524bcd5b0c98b38da1ee049a39735c39311e10336024436f",
          ],
          "root": "572ff91aa4bc7c37075ff1c4911fe6fef7a3df5496cdb5e1767b1998db3c7489",
        },
      ],
    },
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 0,
  },
  "c39cdcfced317d0e9989a23ef5292a1ca20f8061e5be85c451645956dd430a0a1": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Vault",
      },
      "lovelace": {
        "quantity": 101068880n,
        "tokenName": null,
      },
    },
    "datum": "Vault",
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 1,
  },
  "c39cdcfced317d0e9989a23ef5292a1ca20f8061e5be85c451645956dd430a0a2": {
    "address": "addr_test1qpuks2fj3l0umdy8h828zkz25sslwnrtzs7weed04lma8dkj7fmpe62uxcuwe5anz4kks022pj6fxa0mcfz52t9a9vysx0qvdu",
    "assets": {
      "lovelace": {
        "quantity": 2870187048n,
        "tokenName": null,
      },
    },
    "datum": undefined,
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 2,
  },
}
`;

exports[`offchain double deposit: double deposit ledger 1`] = `
{
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61071": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Nullifiers",
      },
      "lovelace": {
        "quantity": 2000000n,
        "tokenName": null,
      },
    },
    "datum": {
      "Nullifiers": [
        [],
      ],
    },
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 1,
  },
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61073": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "lovelace": {
        "quantity": 24011010n,
        "tokenName": null,
      },
    },
    "datum": undefined,
    "datumHash": undefined,
    "hasScriptRef": true,
    "outputIndex": 3,
  },
  "91e1edd94e99356529e7261f53d0dcf9a49caa511003c233e6e5fc72e57415ff0": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Tree",
      },
      "lovelace": {
        "quantity": 2000000n,
        "tokenName": null,
      },
    },
    "datum": {
      "Tree": [
        {
          "leafs": [
            "e1587401f42aa18899004e6b313f62b1732dd9860ac4085f4790f62b24b7dec3",
            "bdde83d5b26cd7677153640af3ce94739df8d51443024f2933abf843b8c1b009",
          ],
          "root": "f41c4b51b53c4ed72deafb6f3e9ebca853bc9f6db6828fad536d20d1fa84b3f1",
        },
      ],
    },
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 0,
  },
  "91e1edd94e99356529e7261f53d0dcf9a49caa511003c233e6e5fc72e57415ff1": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Vault",
      },
      "lovelace": {
        "quantity": 201068880n,
        "tokenName": null,
      },
    },
    "datum": "Vault",
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 1,
  },
  "91e1edd94e99356529e7261f53d0dcf9a49caa511003c233e6e5fc72e57415ff2": {
    "address": "addr_test1qpuks2fj3l0umdy8h828zkz25sslwnrtzs7weed04lma8dkj7fmpe62uxcuwe5anz4kks022pj6fxa0mcfz52t9a9vysx0qvdu",
    "assets": {
      "lovelace": {
        "quantity": 2769917937n,
        "tokenName": null,
      },
    },
    "datum": undefined,
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 2,
  },
}
`;

exports[`offchain withdraw: withdraw ledger 1`] = `
{
  "07015648fba33386ee13528cb5334329adfa333ce9c844717a0ddf90d83b61073": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "lovelace": {
        "quantity": 24011010n,
        "tokenName": null,
      },
    },
    "datum": undefined,
    "datumHash": undefined,
    "hasScriptRef": true,
    "outputIndex": 3,
  },
  "c95224e21035fa2fd214b1e92872b394186f90c32a783d6420990de2cd2fd4360": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Nullifiers",
      },
      "lovelace": {
        "quantity": 2000000n,
        "tokenName": null,
      },
    },
    "datum": {
      "Nullifiers": [
        [
          "9d59ae5baedd7006e63b61fd79f83ceb5c71d02433bcc95ca12939b3344461",
        ],
      ],
    },
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 0,
  },
  "c95224e21035fa2fd214b1e92872b394186f90c32a783d6420990de2cd2fd4361": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Vault",
      },
      "lovelace": {
        "quantity": 1068880n,
        "tokenName": null,
      },
    },
    "datum": "Vault",
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 1,
  },
  "c95224e21035fa2fd214b1e92872b394186f90c32a783d6420990de2cd2fd4362": {
    "address": "addr_test1qz4m06a7vfrlxecwz9cq5d85htr0h8qzkglse39e02xd790q0lh95wfaeym84qw5th90mhw0uanx2sxdxzpwhl9eq2csk66908",
    "assets": {
      "lovelace": {
        "quantity": 98000000n,
        "tokenName": null,
      },
    },
    "datum": undefined,
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 2,
  },
  "c95224e21035fa2fd214b1e92872b394186f90c32a783d6420990de2cd2fd4363": {
    "address": "addr_test1qpuks2fj3l0umdy8h828zkz25sslwnrtzs7weed04lma8dkj7fmpe62uxcuwe5anz4kks022pj6fxa0mcfz52t9a9vysx0qvdu",
    "assets": {
      "lovelace": {
        "quantity": 2871932301n,
        "tokenName": null,
      },
    },
    "datum": undefined,
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 3,
  },
  "f4205fd1dd09178a283846cb836c52a88f2dd0ece8ae7856ef92234414ff2ff60": {
    "address": "addr_test1wptjzydqe8zl2yl797w94t00khurwk5dujdrr2k4sh4xqvq39f38k",
    "assets": {
      "516feef38e451685a9043aa91b26191f8d4c1cb20c6d93f00e9c8368": {
        "quantity": 1n,
        "tokenName": "Tree",
      },
      "lovelace": {
        "quantity": 2000000n,
        "tokenName": null,
      },
    },
    "datum": {
      "Tree": [
        {
          "leafs": [
            "e9e19a86818cb673ece879e6727cfaaa9495a08337738f697025ea5263e847c4",
          ],
          "root": "8d80e7f99be3734e72d5e68710b0c35573db6c08ce21166d47cce9dbbe544353",
        },
      ],
    },
    "datumHash": undefined,
    "hasScriptRef": false,
    "outputIndex": 0,
  },
}
`;
